prometheus/istio/base/grafana-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: $(namespace)
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: https
      number: 443
      protocol: HTTPS
    hosts:
    - "$(GRAFANA_DOMAINNAME)"
    tls:
      mode: SIMPLE
      credentialName: grafana-tls
